--- a/ejs/views/viewItem.ejs
+++ b/ejs/views/viewItem.ejs
@@ -11,7 +11,7 @@
          <ul>
             <li>Name:<%= product.name  %></li>
             <li>Price:<%= product.price  %></li>
-            <li>Description:<%=product.desc  %></li>
+            <li>Description:<%=product.quantity  %></li>
     </ul>
     </div>
     <%- include('footer') %>
