--- a/ejs/views/addProduct.ejs
+++ b/ejs/views/addProduct.ejs
@@ -7,10 +7,11 @@
 </head>
 <body>
     <%- include('header') %>
-        <form action="/add" method="POST">
+        <form action="/add" method="POST" enctype="multipart/form-data">
         <input type="text" name="name" >  <br> <br>
         <input type="text" name="price" >  <br> <br>
-        <input type="text" name="desc">  <br> <br>
+        <input type="text" name="quantity">  <br> <br>
+        <input type="file" name="file"> <br><br>
         <input type="submit">
     </form>
     <%- include('footer') %>
