added block/ublock users via admin

--- a/ecom/views/login.ejs
+++ b/ecom/views/login.ejs
@@ -15,7 +15,7 @@
         <br><br>
         <button type="submit">Login</button>
     </form>
-    <% if (msg!= undefined) { %>
+    <% if (msg != "") { %>
         <p><%= msg %></p>
     <% } %>
 </body>
