--- a/ecom/views/users.ejs
+++ b/ecom/views/users.ejs
@@ -14,6 +14,7 @@
         <th>email</th>
         <th>role</th>
         <th>cart</th>
+        <th>BLOCK</th>
     </tr>
    <%  users.forEach(user => { %>
         <tr>
@@ -21,6 +22,7 @@
             <td><%= user.email %></td>
             <td><%= user.role %></td>
             <td><%= user.selectedProduct.join(',') %></td>
+            <td><a href="/blockUnblock/<%= user._id %>"><%= user.block ? "unblock" : "block" %></a> </td>
         </tr>
     
 <% }); %>
